[package]
name = "qr"
authors = ["Nguyen Thai <shiroemon279@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
fast_qr = { version = "0.8.6", features = ["image"] }
miette = { version = "5.8.0", features = ["fancy"] }
thiserror = "1.0"
